fix video streaming on mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -41,9 +41,4 @@ h6 {
     margin-left: 120px;
       justify-content: center;
   }
-  iframe{
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-  }
 }
